# lefauxpain

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  THIRD-PARTY-LICENSES.md  THIRD_PARTY_LICENSES
.github/: dependabot.yml
.github/workflows/: publish.yml  validate.yml
client/: index.html  package-lock.json  package.json  strudel-sandbox.html  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.tsx  strudel-sandbox.ts  strudel.d.ts
client/src/applets/: index.ts  (+3 more)
desktop/: package-lock.json  package.json  test_webrtc.py
desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src-tauri/src/screen/: capture.rs  encoder.rs  mod.rs  nvenc.rs  peer.rs  preview.rs  vaapi.rs
desktop/src-tauri/src/voice/: audio_capture.rs  audio_playback.rs  mod.rs  peer.rs  resampler.rs  speaking.rs  types.rs
doc/: screensharing_optimize.md
docs/: SPEC.md  ai_factory_architecture.md  applet.md  apt_repo.md  artifact_signing.md  dependabot_todo.md  deploy.md  notifications.md  nvenc-plan.md  screensharing.md  screensharing_desktop.md  security-hardening.md  testing-and-quality.md  vaapi.md
server/: embed.go  go.mod  go.sum  gui.go  gui_stub.go  main.go
server/api/: admin.go  audio.go  auth.go  channel_settings.go  channels.go  documents.go  media.go  messages.go  middleware.go  radio.go  ratelimit.go  router.go  stars.go  unfurl.go  upload.go  webhooks.go
server/audio/: audio.go
server/config/: config.go
server/crypto/: crypto.go
server/db/: attachments.go  channels.go  db.go  documents.go  media.go  mentions.go  messages.go  migrations.go  notifications.go  radio.go  reactions.go  settings.go  stars.go  strudel.go  unfurls.go  users.go  verification.go  webhooks.go
server/email/: postmark.go  provider.go  smtp.go  templates.go  test_provider.go
server/sfu/: peer.go  room.go  screen_room.go  sfu.go
server/storage/: audio.go  files.go
server/unfurl/: unfurl.go
server/ws/: applet_media.go  applet_radio.go  applet_strudel.go  client.go  handlers.go  hub.go  plugin.go  protocol.go
specs/architecture/: current-state.md
specs/features/: admin-email-settings.md  approval-email.md  audio-share.md  browser-notifications.md  email-verification.md  mention-email.md  terminal.md  url-unfurling.md  webhooks.md
specs/scenarios/: admin-email-settings-scenarios.md  audio-share-scenarios.md  browser-notifications-scenarios.md  critical-path.md  email-verification-scenarios.md  security-scenarios.md  terminal-mode-scenarios.md  url-unfurling-scenarios.md
validation/: admin_email_settings_test.go  audio_share_test.go  critical_path_test.go  email_verification_test.go  go.mod  helpers.go
(+80 files in other folders)
