[package]
name = "lefauxpain-desktop"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
webrtc = "0.11"
cpal = "0.15"
opus = "0.3"
rubato = "0.14"
ringbuf = "0.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
bytes = "1"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
