[package]
name = "lefauxpain-desktop"
version = "1.5.1"
edition = "2021"

[features]
default = []
vaapi = ["cros-codecs"]
nvenc = ["nvidia-video-codec-sdk", "cudarc"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
webrtc = "0.11"
cpal = "0.15"
opus = "0.3"
rubato = "0.14"
ringbuf = "0.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
bytes = "1"
base64 = "0.22"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"
openh264 = { version = "0.6", features = ["source"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
ashpd = "0.9"
pipewire = "0.8"
libspa = "0.8"
cros-codecs = { version = "0.0.5", features = ["vaapi"], optional = true }
nvidia-video-codec-sdk = { version = "0.4", optional = true }
cudarc = { version = "0.16", optional = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Optimize dependencies even in dev builds — critical for real-time
# encode/decode (openh264, opus, rubato, image) which are unusably slow
# at opt-level 0. Our own code stays unoptimized for fast rebuilds.
[profile.dev.package."*"]
opt-level = 3
